# solva

./: README.md
solva-construction/: .gitignore  index.html  package-lock.json  package.json  projects-recover.json  schedule-recover.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
solva-construction/docs/: construction-scheduler-app-audit-planning-brief.md  deep-research-report.md
solva-construction/docs/releases/: 1.1.1-release-notes.md  block1-acceptance.md  block2-dependency-smoke-test.md  changelog.md  data-preservation.md  github-hosting.md  release-rules.md  signing-env-setup.md  test-channel.md  update-smoke-test.md  updater-config.md  versioning.md
solva-construction/landing-page/: index.html
solva-construction/landing-page/css/: styles.css
solva-construction/landing-page/js/: main.js
solva-construction/scripts/dev/: patch-schedule-dndkit.ps1
solva-construction/scripts/release/: build-alpha-test.ps1  build-alpha.ps1  load-signing-env.ps1  publish-manifest.mjs  sync-version.mjs
solva-construction/src/: App.css  App.tsx  index.css
solva-construction/src-tauri/: 2  Cargo.toml  tauri.conf.json  tauri.test.conf.json
solva-construction/src-tauri/capabilities/: default.json
solva-construction/src-tauri/icons/: icon.icns
solva-construction/src-tauri/src/: main.rs
solva-construction/src-tauri/windows/: test-installer-hooks.nsh
solva-construction/src/components/: ProjectToolsPanel.test.tsx  ProjectToolsPanel.tsx
solva-construction/src/lib/: dependencyUx.test.ts  dependencyUx.ts  dndReorder.test.ts  dndReorder.ts  (+10 more)
(+21 files in other folders)
